--- a/home.html
+++ b/home.html
@@ -43,182 +43,177 @@
     </script>
   </head>
   <body class="mv">
-    <div class="screen">
-      <!-- header begin -->
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">
-              <picture>
-                <source
-                  srcset="images/icon.webp"
-                  media="(max-width:500px)"
-                  type="image/webp"
-                />
-                <source srcset="images/icon.jpg" media="(max-width:500px)" />
-                <source srcset="images/icon.webp" type="image/webp" />
-                <img
-                  class="icon"
-                  src="images/icon.jpg"
-                  loading="lazy"
-                  alt="すなめぐ"
-                />
-              </picture>
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="students.html">学生の方へ</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="company.html">企業の方へ</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">すなめぐとは</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="record.html">活動記録</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">お問い合わせ</a>
-                </li>
-              </ul>
-            </div>
+    <!-- header begin -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="home.html">
+            <picture>
+              <source
+                srcset="images/icon.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source srcset="images/icon.jpg" media="(max-width:500px)" />
+              <source srcset="images/icon.webp" type="image/webp" />
+              <img
+                class="icon"
+                src="images/icon.jpg"
+                loading="lazy"
+                alt="すなめぐ"
+              />
+            </picture>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="students.html">学生の方へ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="company.html">企業の方へ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">すなめぐとは</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="record.html">活動記録</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">お問い合わせ</a>
+              </li>
+            </ul>
           </div>
-        </nav>
-      </header>
-      <!-- header end -->
-      <!-- main begin -->
-      <main>
-        <div class="documents wrapper">
-          <picture>
-            <source
-              srcset="images/砂丘の恵みの納品依頼.webp"
-              media="(max-width:500px)"
-              type="image/webp"
-            />
-            <source
-              srcset="images/砂丘の恵みの納品依頼.jpg"
-              media="(max-width:500px)"
-            />
-            <source
-              srcset="images/砂丘の恵みの納品依頼.webp"
-              type="image/webp"
-            />
-            <img
-              src="images/砂丘の恵みの納品依頼.jpg"
-              loading="lazy"
-              alt="メインテーマ"
-            />
-          </picture>
         </div>
+      </nav>
+    </header>
+    <!-- header end -->
+    <!-- main begin -->
+    <main>
+      <div class="documents wrapper">
+        <picture>
+          <source
+            srcset="images/砂丘の恵みの納品依頼.webp"
+            media="(max-width:500px)"
+            type="image/webp"
+          />
+          <source
+            srcset="images/砂丘の恵みの納品依頼.jpg"
+            media="(max-width:500px)"
+          />
+          <source srcset="images/砂丘の恵みの納品依頼.webp" type="image/webp" />
+          <img
+            src="images/砂丘の恵みの納品依頼.jpg"
+            loading="lazy"
+            alt="メインテーマ"
+          />
+        </picture>
+      </div>
 
-        <div class="wrapper">
-          <h1>協賛企業</h1>
-          <div class="container mt-4">
-            <div class="row gy-3">
-              <div class="col-lo-4 col-sm-6">
-                <picture>
-                  <source
-                    srcset="images/company/tokudashoten.webp"
-                    media="(max-width:500px)"
-                    type="image/webp"
-                  />
-                  <source
-                    srcset="images/company/tokudashoten.jpg"
-                    media="(max-width:500px)"
-                  />
-                  <source
-                    srcset="images/company/tokudashoten.webp"
-                    type="image/webp"
-                  />
-                  <img
-                    src="images/company/tokudashoten.jpg"
-                    loading="lazy"
-                    alt="徳田商店"
-                  />
-                </picture>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="wrapper">
-          <h1>協力企業</h1>
+      <div class="wrapper">
+        <h1>協賛企業</h1>
+        <div class="container mt-4">
           <div class="row gy-3">
             <div class="col-lo-4 col-sm-6">
               <picture>
                 <source
-                  srcset="images/company/BFロゴ.webp"
+                  srcset="images/company/tokudashoten.webp"
                   media="(max-width:500px)"
                   type="image/webp"
                 />
                 <source
-                  srcset="images/company/BFロゴ.jpg"
+                  srcset="images/company/tokudashoten.jpg"
                   media="(max-width:500px)"
                 />
-                <source srcset="images/company/BFロゴ.webp" type="image/webp" />
+                <source
+                  srcset="images/company/tokudashoten.webp"
+                  type="image/webp"
+                />
                 <img
-                  src="images/company/BFロゴ.jpg"
+                  src="images/company/tokudashoten.jpg"
                   loading="lazy"
-                  alt="ビーフリー"
+                  alt="徳田商店"
                 />
               </picture>
             </div>
           </div>
         </div>
-
-        <div class="news wrapper">
-          <h1>News</h1>
-          <div class="twitter">
-            <a
-              class="twitter-timeline"
-              data-width="920"
-              data-height="1000"
-              data-dnt="true"
-              href="https://twitter.com/sunamegu_megumi?ref_src=twsrc%5Etfw"
-              >Tweets by sunamegu_megumi</a
-            >
-            <script
-              src="https://platform.twitter.com/widgets.js"
-              charset="utf-8"
-              defer
-            ></script>
+      </div>
+      <div class="wrapper">
+        <h1>協力企業</h1>
+        <div class="row gy-3">
+          <div class="col-lo-4 col-sm-6">
+            <picture>
+              <source
+                srcset="images/company/BFロゴ.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source
+                srcset="images/company/BFロゴ.jpg"
+                media="(max-width:500px)"
+              />
+              <source srcset="images/company/BFロゴ.webp" type="image/webp" />
+              <img
+                src="images/company/BFロゴ.jpg"
+                loading="lazy"
+                alt="ビーフリー"
+              />
+            </picture>
           </div>
         </div>
-      </main>
-      <!-- main end -->
-      <!-- footer begin -->
-      <footer class="py-4 mt-5 bg-dark text-center" id="footer">
-        <div class="container">
-          <p class="text-white-50 small">砂丘の恵みの納品依頼</p>
-        </div>
-      </footer>
-      <!-- footer end -->
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"
-      ></script>
-      <script type="application/ld+json">
-        "@context" : "http://schema.org",
-        "@type" : "WebSite",
-        "name" : "砂丘の恵みの納品依頼"
-        "alternateName" : "すなめぐ",
-        "url" : "https://sunamegu.net"
-      </script>
+      </div>
 
-      <script src="modernizr-custom.js"></script>
-    </div>
+      <div class="news wrapper">
+        <h1>News</h1>
+        <div class="twitter">
+          <a
+            class="twitter-timeline"
+            data-width="920"
+            data-height="1000"
+            data-dnt="true"
+            href="https://twitter.com/sunamegu_megumi?ref_src=twsrc%5Etfw"
+            >Tweets by sunamegu_megumi</a
+          >
+          <script
+            src="https://platform.twitter.com/widgets.js"
+            charset="utf-8"
+            defer
+          ></script>
+        </div>
+      </div>
+    </main>
+    <!-- main end -->
+    <!-- footer begin -->
+    <footer class="py-4 mt-5 bg-dark text-center" id="footer">
+      <div class="container">
+        <p class="text-white-50 small">砂丘の恵みの納品依頼</p>
+      </div>
+    </footer>
+    <!-- footer end -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script type="application/ld+json">
+      "@context" : "http://schema.org",
+      "@type" : "WebSite",
+      "name" : "砂丘の恵みの納品依頼"
+      "alternateName" : "すなめぐ",
+      "url" : "https://sunamegu.net"
+    </script>
+
+    <script src="modernizr-custom.js"></script>
   </body>
 </html>
