--- a/students.html
+++ b/students.html
@@ -43,180 +43,174 @@
     </script>
   </head>
   <body class="mv">
-    <div class="screen">
-      <!-- header begin -->
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="home.html"
-              ><picture>
+    <!-- header begin -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="home.html"
+            ><picture>
+              <source
+                srcset="images/icon.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source srcset="images/icon.jpg" media="(max-width:500px)" />
+              <source srcset="images/icon.webp" type="image/webp" />
+              <img class="icon" src="images/icon.jpg" alt="すなめぐ" />
+            </picture>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="students.html"
+                  >学生の方へ</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="company.html">企業の方へ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">すなめぐとは</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">活動記録</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">お問い合わせ</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- header end -->
+    <!-- main begin -->
+    <main>
+      <div class="wrapper">
+        <div id="members">
+          <h1>メンバー募集</h1>
+          <div>
+            <p>
+              すなめぐのメンバーを募集中です。自分のやりたいことを将来に活かせる活動をぜひしてみませんか？
+            </p>
+            <p>すなめぐはいくつかの部門に分かれて活動しています。</p>
+            <p>
+              現在、食料配布部門、アルバイト・ボランティア関係部門、デザイン部門、農業部門に分かれて活動しています。
+            </p>
+            <p>
+              またその他ホームページを作成したり、SNSの更新、企業の打ち合わせなど幅広い活動をしています。
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <ul id="page-link">
+          <li><a href="#long">長期アルバイト</a></li>
+          <li><a href="#short">短期アルバイト</a></li>
+          <li><a href="#single">単発アルバイト</a></li>
+          <li><a href="#volunteer">ボランティア</a></li>
+          <li><a href="#others">その他イベント</a></li>
+        </ul>
+      </div>
+      <div class="wrapper">
+        <h1 id="albite">アルバイト募集</h1>
+        <h2>長期アルバイト</h2>
+        <div class="container mt-4">
+          <div id="long" class="row gy-3">
+            <div class="col-lo-4 col-sm-6">
+              <script type="text/javascript" defer src="js/long.js"></script>
+              <picture>
                 <source
-                  srcset="images/icon.webp"
+                  srcset="images/long/元氣亭バイト募集チラシ.webp"
                   media="(max-width:500px)"
                   type="image/webp"
                 />
-                <source srcset="images/icon.jpg" media="(max-width:500px)" />
-                <source srcset="images/icon.webp" type="image/webp" />
-                <img class="icon" src="images/icon.jpg" alt="すなめぐ" />
+                <source
+                  srcset="images/long/元氣亭バイト募集チラシ.jpg"
+                  media="(max-width:500px)"
+                />
+                <source
+                  srcset="images/long/元氣亭バイト募集チラシ.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="images/long/元氣亭バイト募集チラシ.jpg"
+                  loading="lazy"
+                  alt="アルバイト情報"
+                />
               </picture>
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="students.html"
-                    >学生の方へ</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="company.html">企業の方へ</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">すなめぐとは</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">活動記録</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">お問い合わせ</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
-      <!-- header end -->
-      <!-- main begin -->
-      <main>
-        <div class="wrapper">
-          <div id="members">
-            <h1>メンバー募集</h1>
-            <div>
-              <p>
-                すなめぐのメンバーを募集中です。自分のやりたいことを将来に活かせる活動をぜひしてみませんか？
-              </p>
-              <p>すなめぐはいくつかの部門に分かれて活動しています。</p>
-              <p>
-                現在、食料配布部門、アルバイト・ボランティア関係部門、デザイン部門、農業部門に分かれて活動しています。
-              </p>
-              <p>
-                またその他ホームページを作成したり、SNSの更新、企業の打ち合わせなど幅広い活動をしています。
-              </p>
             </div>
           </div>
         </div>
+        <div class="top"><a href="#">Topへ</a></div>
+        <h2>短期アルバイト</h2>
+        <div class="container mt-4">
+          <div id="short" class="row gy-3">
+            <script type="text/javascript" defer src="js/short.js"></script>
+          </div>
+        </div>
+        <div class="top"><a href="#">Topへ</a></div>
+        <h2>単発バイト</h2>
+        <div class="container mt-4">
+          <div id="single" class="row gy-3">
+            <script type="text/javascript" defer src="js/single.js"></script>
+          </div>
+        </div>
+        <div class="top"><a href="#">Topへ</a></div>
+        <div class="wrapper">
+          <h1>ボランティア募集</h1>
+          <div class="container mt-4">
+            <div id="volunteer" class="row gy-3">
+              <script
+                type="text/javascript"
+                defer
+                src="js/volunteer.js"
+              ></script>
+            </div>
+          </div>
+        </div>
+        <div class="top"><a href="#">Topへ</a></div>
 
         <div class="wrapper">
-          <ul id="page-link">
-            <li><a href="#long">長期アルバイト</a></li>
-            <li><a href="#short">短期アルバイト</a></li>
-            <li><a href="#single">単発アルバイト</a></li>
-            <li><a href="#volunteer">ボランティア</a></li>
-            <li><a href="#others">その他イベント</a></li>
-          </ul>
+          <h1>その他イベント</h1>
+          <div class="container mt-4">
+            <div id="others" class="row gy-3">
+              <script type="text/javascript" defer src="js/others.js"></script>
+            </div>
+          </div>
         </div>
-        <div class="wrapper">
-          <h1 id="albite">アルバイト募集</h1>
-          <h2>長期アルバイト</h2>
-          <div class="container mt-4">
-            <div id="long" class="row gy-3">
-              <div class="col-lo-4 col-sm-6">
-                <script type="text/javascript" defer src="js/long.js"></script>
-                <picture>
-                  <source
-                    srcset="images/long/元氣亭バイト募集チラシ.webp"
-                    media="(max-width:500px)"
-                    type="image/webp"
-                  />
-                  <source
-                    srcset="images/long/元氣亭バイト募集チラシ.jpg"
-                    media="(max-width:500px)"
-                  />
-                  <source
-                    srcset="images/long/元氣亭バイト募集チラシ.webp"
-                    type="image/webp"
-                  />
-                  <img
-                    src="images/long/元氣亭バイト募集チラシ.jpg"
-                    loading="lazy"
-                    alt="アルバイト情報"
-                  />
-                </picture>
-              </div>
-            </div>
-          </div>
-          <div class="top"><a href="#">Topへ</a></div>
-          <h2>短期アルバイト</h2>
-          <div class="container mt-4">
-            <div id="short" class="row gy-3">
-              <script type="text/javascript" defer src="js/short.js"></script>
-            </div>
-          </div>
-          <div class="top"><a href="#">Topへ</a></div>
-          <h2>単発バイト</h2>
-          <div class="container mt-4">
-            <div id="single" class="row gy-3">
-              <script type="text/javascript" defer src="js/single.js"></script>
-            </div>
-          </div>
-          <div class="top"><a href="#">Topへ</a></div>
-          <div class="wrapper">
-            <h1>ボランティア募集</h1>
-            <div class="container mt-4">
-              <div id="volunteer" class="row gy-3">
-                <script
-                  type="text/javascript"
-                  defer
-                  src="js/volunteer.js"
-                ></script>
-              </div>
-            </div>
-          </div>
-          <div class="top"><a href="#">Topへ</a></div>
+        <div class="top"><a href="#">Topへ</a></div>
+      </div>
+    </main>
+    <!-- main end -->
+    <!-- footer begin -->
+    <footer class="py-4 mt-5 bg-dark text-center" id="footer">
+      <div class="container">
+        <p class="text-white-50 small">砂丘の恵みの納品依頼</p>
+      </div>
+    </footer>
+    <!-- footer end -->
 
-          <div class="wrapper">
-            <h1>その他イベント</h1>
-            <div class="container mt-4">
-              <div id="others" class="row gy-3">
-                <script
-                  type="text/javascript"
-                  defer
-                  src="js/others.js"
-                ></script>
-              </div>
-            </div>
-          </div>
-          <div class="top"><a href="#">Topへ</a></div>
-        </div>
-      </main>
-      <!-- main end -->
-      <!-- footer begin -->
-      <footer class="py-4 mt-5 bg-dark text-center" id="footer">
-        <div class="container">
-          <p class="text-white-50 small">砂丘の恵みの納品依頼</p>
-        </div>
-      </footer>
-      <!-- footer end -->
-
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"
-      ></script>
-      <script src="modernizr-custom.js"></script>
-    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="modernizr-custom.js"></script>
   </body>
 </html>
