--- a/students.html
+++ b/students.html
@@ -132,8 +132,8 @@
         <h2>長期アルバイト</h2>
         <div class="container mt-4">
           <div id="long" class="row gy-3">
+            <script type="text/javascript" defer src="js/long.js"></script>
             <div class="col-lo-4 col-sm-6">
-              <script type="text/javascript" defer src="js/long.js"></script>
               <picture>
                 <source
                   srcset="images/long/元氣亭バイト募集チラシ.webp"
@@ -211,6 +211,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="modernizr-custom.js"></script>
+    <script src="js/modernizr-custom.js"></script>
   </body>
 </html>
