--- a/home.html
+++ b/home.html
@@ -15,6 +15,14 @@
       crossorigin="anonymous"
     />
     <title>砂丘の恵みの納品依頼</title>
+    <script type="application/ld+json">
+      "@context" : "http://schema.org",
+      "@type" : "WebSite",
+      "name" : "砂丘の恵みの納品依頼"
+      "alternateName" : "すなめぐ",
+      "url" : "https://sunamegu.net"
+    </script>
+
     <link rel="icon" href="images/icon.webp" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
     <link rel="preload" href="css/html5reset-1.6.1.min.css" as="style" />
@@ -206,14 +214,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script type="application/ld+json">
-      "@context" : "http://schema.org",
-      "@type" : "WebSite",
-      "name" : "砂丘の恵みの納品依頼"
-      "alternateName" : "すなめぐ",
-      "url" : "https://sunamegu.net"
-    </script>
-
-    <script src="modernizr-custom.js"></script>
+    <script src="js/modernizr-custom.js"></script>
   </body>
 </html>
