--- a/company.html
+++ b/company.html
@@ -208,6 +208,25 @@
               />
             </picture>
           </div>
+          <div class="col-lo-4 col-sm-6">
+            <picture>
+              <source
+                srcset="images/company/select.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source
+                srcset="images/company/select.jpg"
+                media="(max-width:500px)"
+              />
+              <source srcset="images/company/select.webp" type="image/webp" />
+              <img
+                src="images/company/select.jpg"
+                loading="lazy"
+                alt="中央企画"
+              />
+            </picture>
+          </div>
         </div>
       </div>
     </main>
@@ -224,6 +243,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="modernizr-custom.js"></script>
+    <script src="js/modernizr-custom.js"></script>
   </body>
 </html>
