--- a/home.html
+++ b/home.html
@@ -179,6 +179,25 @@
               />
             </picture>
           </div>
+          <div class="col-lo-4 col-sm-6">
+            <picture>
+              <source
+                srcset="images/company/select.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source
+                srcset="images/company/select.jpg"
+                media="(max-width:500px)"
+              />
+              <source srcset="images/company/select.webp" type="image/webp" />
+              <img
+                src="images/company/select.jpg"
+                loading="lazy"
+                alt="中央企画"
+              />
+            </picture>
+          </div>
         </div>
       </div>
 
