--- a/company.html
+++ b/company.html
@@ -184,6 +184,25 @@
               />
             </picture>
           </div>
+          <div class="col-lo-4 col-sm-6">
+            <picture>
+              <source
+                srcset="images/company/ja鳥取.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source
+                srcset="images/company/ja鳥取.jpg"
+                media="(max-width:500px)"
+              />
+              <source srcset="images/company/ja鳥取.webp" type="image/webp" />
+              <img
+                src="images/company/ja鳥取.jpg"
+                loading="lazy"
+                alt="JA全農鳥取"
+              />
+            </picture>
+          </div>
         </div>
       </div>
       <div class="wrapper">
