--- a/home.html
+++ b/home.html
@@ -217,6 +217,27 @@
               />
             </picture>
           </div>
+          <div class="col-lo-4 col-sm-6">
+          <picture>
+            <source
+              srcset="images/company/wnbもりバナー.webp"
+              media="(max-width:500px)"
+              type="image/webp"
+            />
+            <source
+              srcset="images/company/wnbもりバナー.jpg"
+              media="(max-width:500px)"
+            />
+            <source
+              srcset="images/company/wnbもりバナー.webp"
+              type="image/webp"
+            />
+            <img
+              src="images/company/wnbもりバナー.jpg"
+              loading="lazy"
+              alt="WebMori"
+            />
+          </picture>
         </div>
       </div>
 
