--- a/home.html
+++ b/home.html
@@ -217,27 +217,29 @@
               />
             </picture>
           </div>
-          <div class="col-lo-4 col-sm-6">
-          <picture>
-            <source
-              srcset="images/company/wnbもりバナー.webp"
-              media="(max-width:500px)"
-              type="image/webp"
-            />
-            <source
-              srcset="images/company/wnbもりバナー.jpg"
-              media="(max-width:500px)"
-            />
-            <source
-              srcset="images/company/wnbもりバナー.webp"
-              type="image/webp"
-            />
-            <img
-              src="images/company/wnbもりバナー.jpg"
-              loading="lazy"
-              alt="WebMori"
-            />
-          </picture>
+          <a href="https://masa-ka.net/">
+            <div class="col-lo-4 col-sm-6">
+              <picture>
+                <source
+                  srcset="images/company/wnbもりバナー.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="images/company/wnbもりバナー.jpg"
+                  media="(max-width:500px)"
+                />
+                <source
+                  srcset="images/company/wnbもりバナー.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="images/company/wnbもりバナー.jpg"
+                  loading="lazy"
+                  alt="WebMori"
+                />
+              </picture></div
+          ></a>
         </div>
       </div>
 
