--- a/record.html
+++ b/record.html
@@ -117,6 +117,8 @@
           <dt>2022/11/12</dt>
           <dd>第３回食料配布イベント</dd>
           <dt>2023/1/15</dt>
+          <dd>第４回食料配布イベント</dd>
+          <dt>2023/4/22</dt>
           <dd>
             令和新時代創造県民運動活動表彰で、若者部門優秀賞かつ最優秀賞、とっとりSDGsアワード準グランプリの3つを受賞
             <br /><picture>
@@ -152,6 +154,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="modernizr-custom.js"></script>
+    <script src="js/modernizr-custom.js"></script>
   </body>
 </html>
